Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-127467

QtAbstractItemModel asserts when being rapidly modified

XMLWordPrintable

    • Android
    • 8c9381dfb (dev), 0f976ea1a (6.8), 8bea7773f (dev), 4b6358f43 (6.8), bf7638750 (dev), 2b14b70b4 (6.9), e7fde4958 (6.8)
    • 2024wk30s2FOQtforAndroid

      Tested with the in-progress example from QTBUG-125976.

      Steps:

      1. Add 20 rows and 20 columns to the model
      2. Remove column/row
      3. Add column/row
      4. Loop step 2 & 3 for a few clicks.

      Result:
      After some rows and columns, adding new ones becomes noticeably laggy.
      After 1-10 loops of steps 2 & 3, the application hits an assert and shuts down.

      Log: log.txt

        1. log.txt
          20 kB
        2. MyDataModel.java
          5 kB
        3. Screencast from 24.07.2024 10.34.25.webm
          1.05 MB
        4. log-1.txt
          17 kB
        For Gerrit Dashboard: QTBUG-127467
        # Subject Branch Project Status CR V

            rampe Rami Potinkara
            pevirkku Petri Virkkunen
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: