src/corelib/platform/android/qandroiditemmodelproxy.cpp
@@ -11,9 +11,13 @@ QT_BEGIN_NAMESPACE
 
 using namespace QtJniTypes;
 
+std::map<const QAbstractItemModel *, QRecursiveMutex> QAndroidItemModelProxy::s_mutexes =
+        std::map<const QAbstractItemModel *, QRecursiveMutex>{};
+
 jint QAndroidItemModelProxy::columnCount(const QModelIndex &parent) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     auto parentIndex = QAndroidModelIndexProxy::jInstance(parent);
     return jInstance.callMethod<jint>("columnCount", parentIndex);
 }
@@ -21,6 +25,7 @@ jint QAndroidItemModelProxy::columnCount(const QModelIndex &parent) const
 bool QAndroidItemModelProxy::canFetchMore(const QModelIndex &parent) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     auto parentIndex = QAndroidModelIndexProxy::jInstance(parent);
     return jInstance.callMethod<jboolean>("canFetchMore", parentIndex);
 }
@@ -33,6 +38,7 @@ bool QAndroidItemModelProxy::canFetchMoreDefault(const QModelIndex &parent) cons
 QVariant QAndroidItemModelProxy::data(const QModelIndex &index, int role) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     auto jIndex = QAndroidModelIndexProxy::jInstance(index);
     QJniObject jData = jInstance.callMethod<jobject>("data", jIndex, role);
     return QAndroidTypeConverter::toQVariant(jData);
@@ -41,6 +47,7 @@ QVariant QAndroidItemModelProxy::data(const QModelIndex &index, int role) const
 QModelIndex QAndroidItemModelProxy::index(int row, int column, const QModelIndex &parent) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     JQtModelIndex jIndex = jInstance.callMethod<JQtModelIndex>(
             "index", row, column, QAndroidModelIndexProxy::jInstance(parent));
     return QAndroidModelIndexProxy::qInstance(jIndex);
@@ -49,6 +56,7 @@ QModelIndex QAndroidItemModelProxy::index(int row, int column, const QModelIndex
 QModelIndex QAndroidItemModelProxy::parent(const QModelIndex &index) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
 
     auto jIndex = QAndroidModelIndexProxy::jInstance(index);
     return QAndroidModelIndexProxy::qInstance(
@@ -57,6 +65,7 @@ QModelIndex QAndroidItemModelProxy::parent(const QModelIndex &index) const
 int QAndroidItemModelProxy::rowCount(const QModelIndex &parent) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
 
     auto parentIndex = QAndroidModelIndexProxy::jInstance(parent);
     return jInstance.callMethod<int>("rowCount", parentIndex);
@@ -65,6 +74,7 @@ int QAndroidItemModelProxy::rowCount(const QModelIndex &parent) const
 QHash<int, QByteArray> QAndroidItemModelProxy::roleNames() const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
 
     QHash<int, QByteArray> roleNames;
     HashMap hashMap = jInstance.callMethod<HashMap>("roleNames");
@@ -88,6 +98,7 @@ QHash<int, QByteArray> QAndroidItemModelProxy::defaultRoleNames() const
 void QAndroidItemModelProxy::fetchMore(const QModelIndex &parent)
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     auto parentIndex = QAndroidModelIndexProxy::jInstance(parent);
     jInstance.callMethod<void>("fetchMore", parentIndex);
 }
@@ -100,6 +111,7 @@ void QAndroidItemModelProxy::fetchMoreDefault(const QModelIndex &parent)
 bool QAndroidItemModelProxy::hasChildren(const QModelIndex &parent) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     auto parentIndex = QAndroidModelIndexProxy::jInstance(parent);
     return jInstance.callMethod<jboolean>("hasChildren", parentIndex);
 }
@@ -112,6 +124,7 @@ bool QAndroidItemModelProxy::hasChildrenDefault(const QModelIndex &parent) const
 QModelIndex QAndroidItemModelProxy::sibling(int row, int column, const QModelIndex &parent) const
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     return QAndroidModelIndexProxy::qInstance(jInstance.callMethod<jobject>(
             "sibling", row, column, QAndroidModelIndexProxy::jInstance(parent)));
 }
@@ -124,6 +137,7 @@ QModelIndex QAndroidItemModelProxy::siblingDefault(int row, int column, const QM
 bool QAndroidItemModelProxy::setData(const QModelIndex &index, const QVariant &value, int role)
 {
     Q_ASSERT(jInstance.isValid());
+    const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(this);
     auto jIndex = QAndroidModelIndexProxy::jInstance(index);
     auto jValue = QAndroidTypeConverter::toJavaObject(value, QJniEnvironment::getJniEnv());
     return jInstance.callMethod<jboolean>("setData", jIndex, jValue, role);
@@ -157,8 +171,10 @@ QAndroidItemModelProxy::createNativeProxy(QJniObject itemModel)
         itemModel.callMethod<void>("setNativeReference", reinterpret_cast<jlong>(nativeProxy));
         connect(nativeProxy, &QAndroidItemModelProxy::destroyed, nativeProxy, [](QObject *obj) {
             auto proxy = qobject_cast<QAndroidItemModelProxy *>(obj);
-            if (proxy)
+            if (proxy) {
+                const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(proxy);
                 proxy->jInstance.callMethod<void>("detachFromNative");
+            }
         });
 
         connect(nativeProxy, &QAndroidItemModelProxy::dataChanged, nativeProxy,
@@ -167,6 +183,7 @@ QAndroidItemModelProxy::createNativeProxy(QJniObject itemModel)
                     auto proxy = qobject_cast<QAndroidItemModelProxy *>(nativeProxy);
                     if (proxy) {
                         QJniObject jInstance = proxy->jInstance;
+                        const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(proxy);
                         jInstance.callMethod<void>("handleDataChanged",
                                                     QAndroidModelIndexProxy::jInstance(topLeft),
                                                     QAndroidModelIndexProxy::jInstance(bottomRight),
