src/corelib/platform/android/qandroiditemmodelproxy_p.h
@@ -22,6 +22,7 @@
 #include <QtCore/qjnienvironment.h>
 #include <QtCore/qjnitypes.h>
 #include <QtCore/qthread.h>
+#include <QtCore/qmutex.h>
 
 QT_BEGIN_NAMESPACE
 
@@ -65,7 +66,8 @@ public:
         Q_ASSERT(jvmObject);
         auto model = qobject_cast<QAndroidItemModelProxy *>(nativeInstance(jvmObject));
         Q_ASSERT(model);
-        return safeCall(model, std::forward<Func>(func), std::forward<Args>(args)...);
+        const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(model);
+        return std::invoke(std::forward<Func>(func), model, std::forward<Args>(args)...);
     }
 
     template <typename Func, typename... Args>
@@ -74,7 +76,8 @@ public:
         Q_ASSERT(jvmObject);
         auto model = nativeInstance(jvmObject);
         Q_ASSERT(model);
-        return safeCall(model, std::forward<Func>(func), std::forward<Args>(args)...);
+        const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(model);
+        return std::invoke(std::forward<Func>(func), model, std::forward<Args>(args)...);
     }
 
     template <typename Func1, typename Func2, typename... Args>
@@ -84,33 +87,13 @@ public:
         Q_ASSERT(jvmObject);
         auto nativeModel = nativeInstance(jvmObject);
         auto nativeProxyModel = qobject_cast<QAndroidItemModelProxy *>(nativeModel);
+        const QMutexLocker<QRecursiveMutex> lock = getMutexLocker(nativeModel);
         if (nativeProxyModel)
-            return safeCall(nativeProxyModel, std::forward<Func1>(defaultFunc),
-                            std::forward<Args>(args)...);
+            return std::invoke(std::forward<Func1>(defaultFunc), nativeProxyModel,
+                               std::forward<Args>(args)...);
         else
-            return safeCall(nativeModel, std::forward<Func2>(func), std::forward<Args>(args)...);
-    }
 
-    template <typename Object, typename Func, typename... Args>
-    static auto safeCall(Object *object, Func &&func, Args &&...args)
-    {
-        using ReturnType = decltype(std::invoke(std::forward<Func>(func), object,
-                                                std::forward<Args>(args)...));
-
-        if constexpr (std::is_void_v<ReturnType>) {
-            QMetaObject::invokeMethod(object, std::forward<Func>(func), Qt::AutoConnection,
-                                      std::forward<Args>(args)...);
-        } else {
-            ReturnType returnValue;
-
-            const auto connectionType = object->thread() == QThread::currentThread()
-                    ? Qt::DirectConnection
-                    : Qt::BlockingQueuedConnection;
-
-            QMetaObject::invokeMethod(object, std::forward<Func>(func), connectionType,
-                                      qReturnArg(returnValue), std::forward<Args>(args)...);
-            return returnValue;
-        }
+            return std::invoke(std::forward<Func2>(func), nativeModel, std::forward<Args>(args)...);
     }
 
     static jint jni_columnCount(JNIEnv *env, jobject object, JQtModelIndex parent);
@@ -206,6 +189,19 @@ public:
     static bool registerProxyNatives(QJniEnvironment &env);
 
 private:
+    static std::map<const QAbstractItemModel *, QRecursiveMutex> s_mutexes;
+
+    Q_REQUIRED_RESULT static QMutexLocker<QRecursiveMutex>
+    getMutexLocker(const QAbstractItemModel *model)
+    {
+        auto [iter, inserted] = s_mutexes.try_emplace(model);
+        if (inserted)
+            QObject::connect(model, &QAbstractItemModel::destroyed, model, [](QObject *model) {
+                s_mutexes.erase(reinterpret_cast<QAbstractItemModel *>(model));
+            });
+        return QMutexLocker(&iter->second);
+    }
+
     QJniObject jInstance;
     friend class QAndroidModelIndexProxy;
 };
